<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:action="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_wifi_black_24dp"
        android:key="example_wifi"
        android:title="@string/pref_title_wifi"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:key="example_bluetooth"
        android:title="@string/pref_title_bluetooth"
        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_settings_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_device_name" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_example_settings_list_titles"
        android:entryValues="@array/pref_example_settings_list_values"
        android:key="example_settings_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_stay_awake" />

</PreferenceScreen>